--- a/saracurahc/src/main/resources/static/css/schc.css
+++ b/saracurahc/src/main/resources/static/css/schc.css
@@ -8,25 +8,47 @@
 }
 
 .photo-bg {
-    background-image: src('/resources/static/images');
-    background-size: 300px;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 50%;
-    background-clip: border-box;
-    transition: background-size 0.2s;
-    transition-timing-function: cubic-bezier(.07,1.41,.82,1.41);
-
+    box-shadow: 5px 5px 20px -6px black;
+    background-color: #3c82ff;
+    border-radius: 2%;
     display: block;
-    width: 190px;
-    height: 190px;
-    text-decoration: none;
+    width: auto;
+    height: 400px;
     cursor: pointer;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space:nowrap;
 }
 
 .photo-bg:hover {
-    background-size: 500px;
+    box-shadow: 5px 5px 20px -6px yellow !important;
+}
+
+.fill {
+    min-height: 100%;
+    /*height: -webkit-fill-available;*/
+    /**height: fit-content;**/
+    height: 100%;
+}
+
+.img-medical-consultant-bg {
+    background-image: url('../images/medicalconsultation.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.image-exam-bg {
+    background-image: url('../images/image-exam.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.image-scheduling-bg {
+    background-image: url('../images/scheduling.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.margin-top-2pc {
+    margin-top: 2%;
 }
