Adição do componente full calendar.

--- a/saracurahc/src/main/resources/static/css/schc.css
+++ b/saracurahc/src/main/resources/static/css/schc.css
@@ -90,3 +90,8 @@ span.home-nav-span {
 h5.filters-green-color {
     color: #009688;
 }
+
+.disabled {
+    opacity: 0.3;
+    pointer-events: none;
+}
