--- a/saracurahc/src/main/resources/static/css/schc.css
+++ b/saracurahc/src/main/resources/static/css/schc.css
@@ -99,3 +99,8 @@ h5.filters-green-color {
 .navbar-boxshadow {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 }
+
+.icon-offset {
+    position: relative;
+    top: 7px;
+}
